feat: 메인 화면에서 배너 리스트를 함꼐 반환하도록 수정